[tool.poetry]
name = "fourier"
version = "0.1.0"
description = ""
authors = ["kohei <koheitech001@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
qiskit = "^0.45.0"
matplotlib = "^3.8.2"
pylatexenc = "^2.10"
qiskit-aer = "^0.13.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
